k8s/api-deployment.yaml
apiVersion: v1  # Deployment API group lives in apps/v1
kind: Deployment
metadata:
  name: api  # how kubectl identifies this Deployment
spec:  # this defines what the Deployment will actually do
  replicas: 1 # Kubernetes will keep one instance of the pod running at all times
  selector:  # this is how the Deployment knows which pods it owns
    matchLabels:
      app: api  # Deployment now knows to manage any pod with the tag 'app<colon> api'
  template:  # this is the pod blueprint that tells Deployment how to create the pods
    metadata:
      labels:
        app: api # matches the selector.matchLabels above
    spec:
      containers:
        - name: api  # label for the container inside the pod
          image: budget-bank-api:latest  # the Docker image to run
          imagePullPolicy: Never  # use local image instead of pulling from DockerHub
          ports:
            - containerPort: 5000  # tells that the container listens on port 5000, doesn't expose it though
          env:  # these are the environment variables plugged in at runtime for Flask to know where Postgres is
            - name: DATABASE_URL
              value: postgresql://postgres:postgres@db:5432/expensedb
