k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
    volumes:
      - name: postgres-storage  # this is the volume name that's being stored at the given mount path
        persistentVolumeClaim:
          claimName: postgres-pvc  # the resource of the PersistentVolumeClaim kind that we created above

---
apiVersion: v1
kind: Service
metadata:
  name: db  # this becomes the DNS hostname inside the cluster; anything else and Flask won't be able to find Postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
